Avanzado proceso de reserva. Asociación de cuenta de mercadopago de instructor. Más avances.

--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,1 +1,1 @@
-{"reservations":{"activity_start_date":"06-15","activity_end_date":"09-15"},"prices":{"service_fee":5}}
+{"reservations":{"activity_start_date":"06-15","activity_end_date":"09-15"},"prices":{"service_fee":"5"}}
