--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME=Instructores.com.ar
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost/instructores/public_html
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=homestead
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_DATABASE=instructores_db
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,13 +24,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_HOST=null
+MAIL_PORT=465
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=admin@steambuy.com.ar
-MAIL_FROM_NAME=Admin
+MAIL_FROM_ADDRESS=null
+MAIL_FROM_NAME=null
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -46,3 +46,18 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FILESYSTEM_DRIVER=public
+
+
+FACEBOOK_APP_ID=643938776061678
+FACEBOOK_APP_SECRET=ae7d060a0df75fbe75931eef34a0791f
+FACEBOOK_REDIRECT=http://localhost/instructores/public_html/login/facebook/callback
+FACEBOOK_REDIRECT_INSTRUCTOR=http://localhost/instructores/public_html/instructor/login/facebook/callback
+
+GOOGLE_APP_ID=1026654452624-qt8266g04s0gmu77a5h6js0idcut10cq.apps.googleusercontent.com
+GOOGLE_APP_SECRET=Sk-c3hhq20s273dAhNDWWJp3
+GOOGLE_REDIRECT=http://localhost/instructores/public_html/login/google/callback
+GOOGLE_REDIRECT_INSTRUCTOR=http://localhost/instructores/public_html/instructor/login/google/callback
+
+MP_PUBLIC_KEY=TEST-4dc699b4-f988-46cf-945d-48c4ec565ef9
+MP_ACCESS_TOKEN=TEST-6705395561099232-052309-1580f7548ef0b8472cd109ec6e86c361-92382327
+MP_WEBHOOK_URL=https://webhook.site/93eb060c-b9e5-4792-82ee-d3018575e927
