Arreglados multiples detalles
Validaciones y diálogos en pág configuracion de servicio instructor. Detalles informativos varios. Carga de fecha al abrir página de instructor desde página de resultados de búsqueda.

--- a/.env.example
+++ b/.env.example
@@ -47,17 +47,22 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FILESYSTEM_DRIVER=public
 
-
-FACEBOOK_APP_ID=643938776061678
-FACEBOOK_APP_SECRET=ae7d060a0df75fbe75931eef34a0791f
+#Test FB app
+FACEBOOK_APP_ID=428964797936933
+FACEBOOK_APP_SECRET=5b8d6d035729498bcb163e086b8f0336
 FACEBOOK_REDIRECT=http://localhost/instructores/public_html/login/facebook/callback
 FACEBOOK_REDIRECT_INSTRUCTOR=http://localhost/instructores/public_html/instructor/login/facebook/callback
 
+#Only google app
 GOOGLE_APP_ID=1026654452624-qt8266g04s0gmu77a5h6js0idcut10cq.apps.googleusercontent.com
 GOOGLE_APP_SECRET=Sk-c3hhq20s273dAhNDWWJp3
 GOOGLE_REDIRECT=http://localhost/instructores/public_html/login/google/callback
 GOOGLE_REDIRECT_INSTRUCTOR=http://localhost/instructores/public_html/instructor/login/google/callback
 
+#Test MP credentials
 MP_PUBLIC_KEY=TEST-4dc699b4-f988-46cf-945d-48c4ec565ef9
 MP_ACCESS_TOKEN=TEST-6705395561099232-052309-1580f7548ef0b8472cd109ec6e86c361-92382327
 MP_WEBHOOK_URL=https://webhook.site/93eb060c-b9e5-4792-82ee-d3018575e927
+
+ADMIN_NOTIF_MAIL=vdvedia@gmail.com
+ADMIN_NOTIF_NAME=Vicente
